[package]
name = "shroom-pkt"
version = "0.1.1"
edition = "2021"

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
proptest = "1"
trybuild = { version = "1", features = ["diff"] }

[dependencies]
anyhow = "1.0.75"
array-init = "2.1.0"
arrayvec = "0.7.4"
bitflags = "2.4.0"
bytemuck = "1.14.0"
bytes = "1.5.0"
chrono = "0.4.30"
derive_more = "0.99.17"
either = "1.9.0"
euclid = "0.22.9"
itertools = "0.11.0"
num_enum = "0.7.0"
packed_struct = "0.10.1"
paste = "1.0.14"
pretty-hex = "0.3.0"
thiserror = "1.0.48"
shroom-pkt-derive = { path = "../shroom-pkt-derive" }
