[package]
name = "shroom_net"
version = "0.2.3"
edition = "2021"

[dev-dependencies]
turmoil = "0.5"
quickcheck = "1"

[dependencies]
anyhow = "1.0.69"
array-init = "2.1.0"
arrayvec = "0.7.2"
bytes = "1.4.0"
chrono = "0.4.23"
either = "1.8.1"
num_enum = "0.5.9"
packed_struct = "0.10.1"
pretty-hex = "0.3.0"
thiserror = "1.0.38"
bitflags = "2"
bytemuck = "1.13.1"
geo = "0.24.0"
paste = "1.0.12"
rand = "0.8.5"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["net"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
cipher = { version = "0.4.3", features = ["block-padding"] }
aes = "0.8.1"
async-trait = "0.1.64"
futures = "0.3.28"
log = "0.4.17"
itertools = "0.10.5"
indexmap = "1.9.3"
quickcheck = "1.0.3"
parking_lot = "0.12.1"
derive_more = "0.99.17"
