[package]
name = "shroom_net_derive"
version = "0.2.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
bytes  = "1.3"

[[test]]
name = "tests"
path = "tests/progress.rs"

[dependencies]
syn = { version = "1.0", features=["extra-traits", "parsing"]}
quote = "1.0"
anyhow = "1.0.56"
shroom_net = { version = "0.2.5", path = "../shroom_net" }
darling = "0.14.2"
proc-macro2 = "1.0.49"
either = "1.8.1"

