[package]
name = "shroom_net_derive"
version = "0.2.2"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
trybuild = { version = "1", features = ["diff"] }
bytes  = "1.3"

[[test]]
name = "tests"
path = "tests/progress.rs"

[dependencies]
syn = { version = "2", features=["extra-traits", "parsing"]}
quote = "1"
anyhow = "1"
shroom_net = { version = "0.3", path = "../shroom_net" }
darling = "0.20"
proc-macro2 = "1"
either = "1"

